Use VersionCheck.major() to check 9 and up, and remove TestMisc.isJava9
[ci skip]

Fixes #2073

Signed-off-by: Peter Shipton <Peter_Shipton@ca.ibm.com>