@@ -37,6 +37,7 @@
 	<property name="src_90" location="./src_90" />
 	<property name="build" location="./bin" />
 	<property name="transformerListener" location="${TEST_ROOT}/Utils/src"/>
+	<property name="TestUtilities" location="../TestUtilities/src"/>
 
 	<target name="init">
 		<fail message="BUILD_ROOT must be defined." unless="BUILD_ROOT" />
@@ -58,10 +59,12 @@
 					<src path="${src}" />
 					<src path="${src_80}" />
 					<src path="${transformerListener}" />
+					<src path="${TestUtilities}" />
 					<classpath>
 						<pathelement location="${TEST_ROOT}/TestConfig/lib/testng.jar" />
 						<pathelement location="${TEST_ROOT}/TestConfig/lib/jcommander.jar" />
 						<pathelement location="${TEST_ROOT}/TestConfig/lib/commons-exec.jar" />
+						<pathelement location="${JAVA_BIN}/../../lib/tools.jar" />
 					</classpath>
 				</javac>
 			</then>
@@ -75,11 +78,13 @@
 						<property name="addExports" value="--add-exports java.management/com.ibm.java.lang.management.internal=ALL-UNNAMED --add-exports jdk.management/com.ibm.lang.management.internal=ALL-UNNAMED --add-exports java.management/javax.management=ALL-UNNAMED --add-exports java.base/java.security=ALL-UNNAMED" />
 					</else>
 				</if>
+				<property name="TestUtilitiesExports" value="--add-exports java.base/com.ibm.tools.attach.target=ALL-UNNAMED" />
 				<javac srcdir="${src}" destdir="${build}" debug="true" fork="true" executable="${compiler.javac}" includeAntRuntime="false" encoding="ISO-8859-1">
 					<src path="${src}" />
 					<src path="${src_90}" />
 					<src path="${transformerListener}" />
-					<compilerarg line='${addExports}' />
+					<src path="${TestUtilities}" />
+					<compilerarg line='${addExports} ${TestUtilitiesExports}' />
 					<classpath>
 						<pathelement location="${TEST_ROOT}/TestConfig/lib/testng.jar" />
 						<pathelement location="${TEST_ROOT}/TestConfig/lib/jcommander.jar" />
